updated types.go and spec
